--- a/changelog/v1.5.0-beta13/glooctl-demo-federation.yaml
+++ b/changelog/v1.5.0-beta13/glooctl-demo-federation.yaml
@@ -1,6 +1,6 @@
 changelog:
   - type: NEW_FEATURE
-    description: |
+    description: >-
       Add the `glooctl demo federation` command, which bootstraps a multicluster demo with Gloo Federation
     issueLink: https://github.com/solo-io/gloo/issues/3369
     resolvesIssue: false
