--- a/changelog/v1.5.0-beta17/update-skv2-cluster-deregistration.yaml
+++ b/changelog/v1.5.0-beta17/update-skv2-cluster-deregistration.yaml
@@ -3,7 +3,7 @@ changelog:
       issueLink: https://github.com/solo-io/gloo/issues/3369
       description: >
         Change the `glooctl cluster unregister` command to `glooctl cluster deregister`.
-    - type: NEW_FEATURE
-      issueLink: https://github.com/solo-io/gloo/issues/3369
-      description: >
-        Change the `glooctl cluster unregister` command to `glooctl cluster deregister`.
+    - type: DEPENDENCY_BUMP
+      dependencyOwner: solo-io
+      dependencyRepo: skv2
+      dependencyTag: v0.8.1
